--- a/dotemacs.org
+++ b/dotemacs.org
@@ -23,18 +23,19 @@
 ** UI
 	 Set default font
 	 #+BEGIN_SRC emacs-lisp
-		(set-frame-font "Iosevka Fixed SS04-11" nil t)
-		(add-to-list 'custom-theme-load-path "~/.emacs.d/themes/")
+		 (set-face-attribute 'default nil :font "Iosevka SS04-11" )
+		 (set-frame-font "Iosevka SS04-11" nil t)
 	 #+END_SRC
 
 	 Enable authothemer for custom theme
 	 #+BEGIN_SRC emacs-lisp
-	   (use-package autothemer
-		   :ensure t
-		   :pin melpa-stable)
+		 (use-package autothemer
+			 :ensure t
+			 :pin melpa-stable)
 
-	   (setq custom--inhibit-theme-enable nil)
-	   (load-theme 'nebulae t)
+		 (add-to-list 'custom-theme-load-path "~/.emacs.d/themes/")
+		 (setq custom--inhibit-theme-enable nil)
+		 (load-theme 'nebulae t)
 	 #+END_SRC
 
 	 Disable startup screen
@@ -58,10 +59,11 @@
 
 	 Disable toolbars
 	 #+BEGIN_SRC emacs-lisp
-	   (if (display-graphic-p)
-	       (scroll-bar-mode -1)
-	       (tool-bar-mode -1))
-	   (menu-bar-mode -1)
+		 (if (display-graphic-p)
+				 (progn
+					 (scroll-bar-mode -1)
+					 (tool-bar-mode -1)))
+		 (menu-bar-mode -1)
 	 #+END_SRC
 
 	 Replace bell sound by the visual bell
